tests/sksl/errors/IntrinsicInGlobalVariable.glsl
### Compilation failed:

error: 1: global variable initializer must be a constant expression
1 error
